# llm_kris_init

./: .gitignore  README.md  requirements.txt
1-LangChain/1.1-OpenAi/: 1.1.2-Simpleapp.ipynb  GettingStarted.ipynb  SimpleAppGenAI.ipynb  VectorStoreRetriever.ipynb  tempCodeRunnerFile.ipynb  test_msg.py  test_msg2.py
1-LangChain/CSV_Data_Analysis/: Pandas_DF_Agent.ipynb
1-LangChain/GENAI_MINE_IMP/: Agents_v5.ipynb  Assignment6_Answers_RAG.ipynb  Copy of Word2Vec_v10.ipynb  Copy of Word2Vec_v11.ipynb  IPC_Chatbot.ipynb  IPC_questions_memory_chatbot.py  Lang_Chain_Model_IO_V5.ipynb  OpenSource_LLMs.ipynb  RAG_v5.ipynb  try_Word2Vec_v10.ipynb
1-LangChain/TestForGeneric/: EmailResponseApp.ipynb  TestOutPutParserWith_PYDENTIC.ipynb  vectorretriever.ipynb
1-LangChain/chain/: Chains_UnderTheHood.py  Parallel_Chain.py  RunnableTutorialInLangchain.py  tempCodeRunnerFile.py
1-LangChain/test/: 1.Linear and Logistic Regression.ipynb  (+13 more)
DEEPSEEK/: TestDPSK1.ipynb
Explainable_AI/: README.md  Untitled.ipynb
LLM_SEP_24/: conversationqa.ipynb
Lang-Graph/: CRAG_Mine.ipynb  Getting_started_01.ipynb  HumanInLoopBasic.ipynb  basics.ipynb  simpleRAG1.ipynb  state.ipynb  state_redu.ipynb  test.py
MISC_LLM/: essay.txt  textSplitter_types.ipynb
RAGAS_CODE/: evaluation_singleturn.ipynb  ragas_llm_evaluation.ipynb
RAG_BASIC_TO_ADVANCE/: 02_Query_Transformations.ipynb
Transformer/: Transformer.py  Transformers_Code_v4.ipynb
crew_ai_agentic_workflow/: README.md  crew_test.ipynb  pyproject.toml
crew_ai_agentic_workflow/src/crew_ai_agentic_workflow/: crew.py  main.py
(+35 files in other folders)
