[project]
name = "crew_ai_agentic_workflow"
version = "0.1.0"
description = "crew-ai-agentic-workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
crew_ai_agentic_workflow = "crew_ai_agentic_workflow.main:run"
run_crew = "crew_ai_agentic_workflow.main:run"
train = "crew_ai_agentic_workflow.main:train"
replay = "crew_ai_agentic_workflow.main:replay"
test = "crew_ai_agentic_workflow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
